@@ -570,7 +570,7 @@ serial4       = disabled
 phonebookfile = phonebook-dosbox-x.txt
 
 [parallel]
-# parallel1: parallel1-3 -- set type of device connected to the parallel (LPT) port.
+# parallel1: parallel1-9 -- set type of device connected to the parallel (LPT) port.
 #              Can be:
 #                 reallpt (direct parallel port passthrough),
 #                 file (records data to a file or passes it to a device),
@@ -597,7 +597,7 @@ phonebookfile = phonebook-dosbox-x.txt
 #                  openwith:<program>: start a program to open the file in all other conditions.
 #                  openerror:<program>: start a program to open the file if an error had occurred.
 #                for printer:
-#                  printer still has it's own configuration section above.
+#                  printer still has it's own configuration section above.Note: LPT1-3 are standard LPT ports. For LPT4-9 you will need to specify a base address if enabled.
 # parallel2: see parallel1
 # parallel3: see parallel1
 #    dongle: Enable dongle
