@@ -178,6 +178,7 @@ fileio      = false
 #                                                    Possible values: ctrlalt, ctrlshift, altshift, mapper.
 #                                 mapper send key: Select the key the mapper SendKey function will send.
 #                                                    Possible values: winlogo, winmenu, alttab, ctrlesc, ctrlbreak, ctrlaltdel.
+#                                synchronize time: If set, DOSBox-X will tries to automatically synchronize time with the host, unless you decide to change the date/time manually.
 #                                   keyboard hook: Use keyboard hook (currently only on Windows) to catch special keys and synchronize the keyboard LEDs with the host.
 #                                          weitek: If set, emulate the Weitek coprocessor. This option only has effect if cputype=386 or cputype=486.
 #                             bochs debug port e9: If set, emulate Bochs debug port E9h. ASCII text written to this I/O port is assumed to be debug output, and logged.
@@ -358,6 +359,7 @@ quit warning                                    = auto
 show advanced options                           = false
 hostkey                                         = mapper
 mapper send key                                 = ctrlaltdel
+synchronize time                                = true
 keyboard hook                                   = false
 weitek                                          = false
 bochs debug port e9                             = false
@@ -1583,7 +1585,7 @@ serial4       = disabled
 phonebookfile = phonebook-dosbox-x.txt
 
 [parallel]
-# parallel1: parallel1-3 -- set type of device connected to the parallel (LPT) port.
+# parallel1: parallel1-9 -- set type of device connected to the parallel (LPT) port.
 #              Can be:
 #                 reallpt (direct parallel port passthrough),
 #                 file (records data to a file or passes it to a device),
@@ -1610,13 +1612,25 @@ phonebookfile = phonebook-dosbox-x.txt
 #                  openwith:<program>: start a program to open the file in all other conditions.
 #                  openerror:<program>: start a program to open the file if an error had occurred.
 #                for printer:
-#                  printer still has it's own configuration section above.
+#                  printer still has it's own configuration section above.Note: LPT1-3 are standard LPT ports. For LPT4-9 you will need to specify a base address if enabled.
 # parallel2: see parallel1
 # parallel3: see parallel1
+# parallel4: see parallel1
+# parallel5: see parallel1
+# parallel6: see parallel1
+# parallel7: see parallel1
+# parallel8: see parallel1
+# parallel9: see parallel1
 #    dongle: Enable dongle
 parallel1 = disabled
 parallel2 = disabled
 parallel3 = disabled
+parallel4 = disabled
+parallel5 = disabled
+parallel6 = disabled
+parallel7 = disabled
+parallel8 = disabled
+parallel9 = disabled
 dongle    = false
 
 [printer]
