@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Dec 8, 2020 4:12:01am"
-#define GIT_COMMIT_HASH "2f3f6c2"
+#define UPDATED_STR "Dec 12, 2020 11:23:28pm"
+#define GIT_COMMIT_HASH "968170f"
 #define COPYRIGHT_END_YEAR "2020"
