@@ -112,7 +112,7 @@ enum { RETURN_EXIT=0,RETURN_CTRLC=1,RETURN_ABORT=2,RETURN_TSR=3};
 extern Bitu DOS_FILES;
 
 #define DOS_DRIVES 26
-#define DOS_DEVICES 30
+#define DOS_DEVICES 40
 
 
 #if 0 /* ORIGINAL DEFINES FOR REFERENCE */
